K8S/mssql-plat-deppl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app:  mssql
    spec:
      containers:
      - name:  mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort:  1433
          name:  mssql-port
        volumeMounts:
        - name: mssql-volume
          mountPath: /var/opt/mssql/data
      volumes:
        - name: mssql-volume
          persistentVolumeClaim:
            claimName: mssql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  selector:
    app: mssql
  type: ClusterIP
  ports:
  - name: mssql-service-port
    protocol: TCP
    port: 1433
    targetPort: mssql-port
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  selector:
    app: mssql
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 1443
    targetPort: mssql-port
