K8S/platform-loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: platformservice
