K8S/rabitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels: 
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rbmq-mgmt-port
            - containerPort: 5672
              name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
  - name: rbmq-ip-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: rbmq-mgmt-port
  - name: rbmq-ip-msg-port
    protocol: TCP
    port: 5672
    targetPort: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer
  ports:
  - name: rbmq-lb-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: rbmq-mgmt-port
  - name: rbmq-lb-msg-port
    protocol: TCP
    port: 5672
    targetPort: rbmq-msg-port
